--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,8 +16,8 @@ jobs:
                     pip install -r requirements.txt
             - name: Linting with Flake8
               run: |
-                    flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
-                    flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
+                    flake8 app/src --count --select=E9,F63,F7,F82 --show-source --statistics
+                    flake8 app/src --count --max-complexity=10 --max-line-length=127 --statistics
             - name: Testing coverage with Nodetests
               run: |
                     nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
