"adding nose-spec plugin"

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,8 +18,9 @@ jobs:
               run: |
                     flake8 app/src --count --select=E9,F63,F7,F82 --show-source --statistics
                     flake8 app/src --count --max-complexity=10 --max-line-length=127 --statistics
-            - name: Testing coverage with Nodetests
+            - name: Testing coverage with nosetests
               run: |
+                    pip install nose-spec
                     nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
 
 
