--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,8 @@ jobs:
             cd app
             npm install
       - name: Run tests
-        run: npm test
+        run:  |
+            cd app
+            npm test
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
