--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,4 +16,9 @@ jobs:
             cd app
             npm test
       - name: Upload coverage report
+        run: |
+            cd app
+            npm run coverage
         uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
