--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,6 +10,15 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
 
+            # Cache dependencies
+            - name: Set up cache
+              uses: actions/cache@v3
+              with:
+                path: ~/.cache/pip  # This is the path where pip stores dependencies
+                key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+                restore-keys: |
+                  ${{ runner.os }}-pip-
+
             - name: Install dependencies
               run: |
                     python -m pip install --upgrade pip
