--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,7 +36,7 @@ jobs:
                     
             # Check if dependencies cached after run
             - name: List cached directories after dependency installation
-              run: ls ~/.cache/pip || true
+              run: ls ~/cache/pip || true
 
 
 
