--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,10 +21,19 @@ jobs:
                 key: Linux-pip-5a10801b288f9708023ca35be6b49ba1ed92ff245458982f0b7795057b587f54
                 restore-keys: Linux-pip-
 
+            # Check if cache hit occurred
+            - name: Check if cache hit
+              id: cache-check
+              run: echo "::set-output name=cache-hit::$(echo ${{ steps.cache-check.outputs.cache-hit }})"
+      
+            # Install dependencies only if cache was not hit
             - name: Install dependencies
+              if: steps.cache-check.outputs.cache-hit != 'true'
               run: |
-                    python -m pip install --upgrade pip
-                    pip install -r requirements.txt
+                python -m pip install --upgrade pip
+                pip install -r requirements.txt
+
+                
             #- name: Linting with Flake8
             #  run: |
             #        flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
