--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,19 +3,51 @@ on:
   push:
   pull_request:
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-            cd app
-            npm install
-      - name: Run tests
-        run: |
-            cd app
-            npm test
-      - name: Upload coverage report
-        run: |
-            cd app
-            npm run coverage
+    build:
+        runs-on: ubuntu-latest
+        env:
+          PIP_CACHE_DIR: app/cache/pip  # Set custom cache directory
+    
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            # Cache Dependencies
+            - name: Set up Dependencies Cache
+              uses: actions/cache@v3
+              with:
+                path: app/cache/pip
+                key: Linux-pip-5a10801b288f9708023ca35be6b49ba1ed92ff245458982f0b7795057b587f54
+                restore-keys: Linux-pip-
+
+            # Check for Cache Hit
+            - name: Check if cache hit
+              id: cache-check
+              run: echo "::set-output name=cache-hit::$(echo ${{ steps.cache-check.outputs.cache-hit }})"
+      
+            # Install Dependencies (on No Cache Hit)
+            - name: Install dependencies
+              if: steps.cache-check.outputs.cache-hit != 'true'
+              run: |
+                cd app
+                npm install
+            # Flake8
+            - name: Linting with Flake8
+              run: |
+                    flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
+                    flake8 src --count --max-complexity=10 --max-line-length=127 --statistics
+
+            # Nodetests        
+            - name: Testing coverage with Nodetests
+              run: |
+                    nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+
+            # Check for Cached Dependencies
+            - name: List cached directories after dependency installation
+              run: ls /cache/pip || true
+
+            # Upload Coverage Report
+            - name: Upload coverage report
+              run: |
+                  cd app
+                  npm run coverage
