--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,7 +34,7 @@ jobs:
 
             # Check for Cached Dependencies
             - name: List cached directories after dependency installation
-              run: ls /cache/pip || true
+              run: ls app/cache/pip || true
 
             # Upload Coverage Report
             - name: Upload coverage report
