--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,40 +4,30 @@ on:
   pull_request:
 jobs:
     build:
-        runs-on: ubuntu-latest
-        env:
-          PIP_CACHE_DIR: /cache/pip  # Set custom cache directory
-    
+        runs-on: ubuntu-latest    
         steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+        - name: Checkout
+          uses: actions/checkout@v3
 
-            # Cache Dependencies
-            - name: Set up Dependencies Cache
-              uses: actions/cache@v3
-              with:
-                path: app/cache/pip
-                key: Linux-pip-5a10801b288f9708023ca35be6b49ba1ed92ff245458982f0b7795057b587f54
-                restore-keys: Linux-pip-
+        - name: Setup Node
+          uses: actions/setup-node@v3.1.1
+          with:
+            node-version: v16.14.2
+            cache: 'yarn'
+            cache-dependency-path: yarn.lock
 
-            # Check for Cache Hit
-            - name: Check if cache hit
-              id: cache-check
-              run: echo "::set-output name=cache-hit::$(echo ${{ steps.cache-check.outputs.cache-hit }})"
+        - name: Install Dependencies
+          run: |
+               cd app
+               yarn install
+               npm install
+
+      ### - run: yarn test
+
       
-            # Install Dependencies (on No Cache Hit)
-            - name: Install dependencies
-              if: steps.cache-check.outputs.cache-hit != 'true'
-              run: |
-                cd app
-                npm install
+      # Upload Coverage Report
+        - name: Upload coverage report
+          run: |
+            cd app
+            npm run coverage
 
-            # Check for Cached Dependencies
-            - name: List cached directories after dependency installation
-              run: ls /cache/pip || true
-
-            # Upload Coverage Report
-            - name: Upload coverage report
-              run: |
-                  cd app
-                  npm run coverage
