--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,24 +9,23 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v3
 
+        # Set up Node Version
         - name: Setup Node
           uses: actions/setup-node@v3.1.1
           with:
             node-version: v16.14.2
             cache: 'yarn'
-            cache-dependency-path: app/yarn.lock
+            cache-dependency-path: app/yarn.lock  # <- This is needed for some reason, but the file is empty when I open it (Antonio)
 
+        # Install yarn and npm
         - name: Install Dependencies
           run: |
                cd app
-               yarn install
+               yarn install  # <- yarn manages caching
                npm install
-
-      ### - run: yarn test
-
       
-      # Upload Coverage Report
-        - name: Upload coverage report
+        # Print Coverage Report
+        - name: Print coverage report
           run: |
             cd app
             npm run coverage
