--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^8.2.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "dotenv": "^8.2.0"
+
   }
 }
