--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,7 +16,8 @@
     "jade": "~1.11.0",
     "mongoose": "^8.2.3",
     "morgan": "~1.9.1",
-    "dotenv": "^8.2.0"
-
+    "dotenv": "^8.2.0",
+    "jest": "^27.5.1",
+    "supertest": "^6.1.3"
   }
 }
