--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,6 +47,7 @@ jobs:
             cd app
             npm run coverage
             cd ../backend
+            npm install
             npm run coverage
 
             
