running server and tests concurrently

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,6 +48,7 @@ jobs:
             npm run coverage
             cd ../backend
             npm install
+            npm start &
             npm run coverage
 
             
