--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,6 +49,7 @@ jobs:
             cd ../backend
             npm install
             npm start &
+            sleep 5
             npm run coverage
 
             
