--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,16 +34,28 @@ jobs:
             cache: 'yarn'
             cache-dependency-path: app/yarn.lock  # <- This is needed for some reason, but the file is empty when I open it (Antonio)
 
-        # Install yarn and npm
-        - name: Install Dependencies
+        # Install yarn and npm for frontend
+        - name: Install Frontend Dependencies
           run: |
                cd app
                yarn install  # <- yarn manages caching
                npm install
       
         # Print Coverage Report
-        - name: Print coverage report
+        - name: Print Frontend coverage report
           run: |
             cd app
             npm run coverage
+
+        # Install yarn and npm for backend
+        - name: Install Backend Dependencies
+          run: |
+            cd backend
+            yarn install  # <- yarn manages caching
+            npm install
             
+        # Print Coverage Report
+        - name: Print Backend coverage report
+          run: |
+            cd backend
+            npm run coverage
