--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,7 +56,7 @@ jobs:
         # Print Coverage Report
         - name: Print Backend coverage report
           env:
-            MONGODB_URI: ${{ secrets.MONGO_DB_URI }}
+            MONGO_URI: ${{ secrets.MONGO_URI }}
             DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
           run: |
             cd backend
