Revert "Adding backend testing to workflow."
This reverts commit 55aedd5ca2d534b6882d3d9b2a694d176d60e2bb.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,7 +56,7 @@ jobs:
         # Print Coverage Report
         - name: Print Backend coverage report
           env:
-            MONGO_URI: ${{ secrets.MONGO_URI }}
+            MONGODB_URI: ${{ secrets.MONGO_DB_URI }}
             DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
           run: |
             cd backend
