--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -51,6 +51,7 @@ jobs:
         - name: Install Backend Dependencies
           run: |
             cd backend
+            yarn install  # <- yarn manages caching
             npm install
             
         # Print Coverage Report
