Debugging GitHub Actions.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,4 +60,5 @@ jobs:
           run: |
             cd backend
             npm run coverage
-            
+          
+        #Test with bad database name.
