--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,6 +3,10 @@ on:
   push:
   pull_request:
   pull_request_target:
+    types:
+      - opened
+    branches:
+      - 'main'
 jobs:
     build:
         runs-on: ubuntu-latest    
@@ -41,12 +45,6 @@ jobs:
                cd app
                yarn install  # <- yarn manages caching
                npm install
-      
-        #Test with bad database name.
-        - name: GitHub Actions debugging
-          run: |
-            echo ${{secrets.MONGO_URI}} | sed 's/./& /g'
-            echo ${{secrets.DATABASE_NAME}} | sed 's/./& /g'
 
         # Print Coverage Report
         - name: Print Frontend coverage report
