--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,10 +1,9 @@
 name: CI workflow
 on:
   push:
+  pull_request:
   pull_request_target:
-    types:
-      - opened
-      
+    types: [opened]
 jobs:
     build:
         runs-on: ubuntu-latest    
