--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,6 +3,8 @@ on:
   push:
   pull_request_target:
     types: [opened]
+  pull_request:
+    
 jobs:
     build:
         runs-on: ubuntu-latest    
