--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,5 +45,11 @@ jobs:
         - name: Print coverage report
           run: |
             cd app
+            
+        - name: Upload coverage reports to Codecov
+          uses: codecov/codecov-action@v4.0.1
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            slug: dusek2/LifeQuest
             npm run coverage
             
