--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,17 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jest": "^27.5.1",
     "mongoose": "^8.2.3",
     "morgan": "~1.9.1",
-    "dotenv": "^8.2.0",
-    "jest": "^27.5.1",
     "supertest": "^6.1.3"
   }
 }
