--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jest": "^27.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "morgan": "~1.9.1",
     "supertest": "^6.1.3"
