--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,7 @@
 
 # Dependencies
 /node_modules
+package-lock.json
 
 # Production
 /build
@@ -17,6 +18,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+
 
 # Runtime data
 pids
