--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -50,5 +50,5 @@ jobs:
           run: |
             curl -Os https://uploader.codecov.io/latest/linux/codecov
             chmod +x codecov
-            ./codecov -t d7f071d1-f5d2-498e-984d-f7b86aef4c17
+            ./codecov -t ${{ secrets.CODECOV_TOKEN }}
 
