Added stubs to skip authentication for unit testing.

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "morgan": "~1.9.1",
+    "sinon": "^17.0.1",
     "supertest": "^6.1.3"
   }
 }
