--- a/Game/LifeQuest/export_presets.cfg
+++ b/Game/LifeQuest/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Export/LifeQuestTest.html"
+export_path="Export/LifeQuest.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
